more responsive design

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Global Internet Services</title>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="Global Internet Services offers cutting-edge solutions for all your web and digital needs, including development, design, and online marketing." />
+    <meta name="keywords" content="global internet services, web development, digital marketing, online solutions, web design, SEO services, internet" />
+    <meta name="author" content="Global Internet Services" />
+    
   </head>
   <body>
     <div id="root"></div>
